--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><link rel=icon type=image/png href=/doc/static/favicons/favicon-16x16.png sizes=16x16><link rel=icon type=image/png href=/doc/static/favicons/favicon-32x32.png sizes=32x32><link rel=stylesheet href=/doc/static/assets/normalize.css media=screen title="no title" charset=utf-8><link rel=stylesheet href=/doc/static/assets/animate.min.css media=screen title="no title" charset=utf-8><link rel=stylesheet href=/doc/static/assets/katex.min.css media=screen title="no title" charset=utf-8><link rel=stylesheet href=/doc/static/assets/hljs-atom-one-light.css media=screen title="no title" charset=utf-8><link rel=stylesheet href=/doc/static/assets/ezicon.css media=screen title="no title" charset=utf-8><title>EBo</title><link href=/doc/static/css/app.7a73a85721632aa1d635091d0cee9274.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/doc/static/js/manifest.666f5b15c38aa2029e74.js></script><script type=text/javascript src=/doc/static/js/vendor.efd429babf8b69701c7c.js></script><script type=text/javascript src=/doc/static/js/app.b34d9b9a9a25074892d8.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Code Splitting</title>
+  <link href="/doc/static/css/app.77a38f9ba8e8f3b78d981addcf612b4f.css" rel="stylesheet"></head>
+  <body>
+  <script type="text/javascript" src="/doc/static/js/manifest.c45f82b3ee5124ef4740.js"></script><script type="text/javascript" src="/doc/static/js/vendor.aa8880402b33cec5ee2a.js"></script><script type="text/javascript" src="/doc/static/js/app.e7a1c0b2d4aa243854e6.js"></script></body>
+</html>
